# Football-Manager-Squad-Analyzer

./: CMakeLists.txt  NOTES.md  TODO.md  main.c  run.sh  weights.h
roles/: afa.h  bpd.h  dm.h  fba.h  ifa.h  ifs.h  skd.h
src/: analyse.c  analyse.h  club.c  club.h  constants.h  date-time.c  date-time.h  maths.h  memory.c  memory.h  player.c  player.h  sort.c  sort.h  squad-analyser.c  squad-analyser.h  strings.c  strings.h  types.h  watch-list.c  watch-list.h  wonderkid.c  wonderkid.h
src/roles/: afa.h  ama.h  bpd.h  dm.h  fba.h  ifa.h  ifs.h  pfa.h  roles.c  roles.h  skd.h
